--- a/frontend/styles/views/main/main-view.css
+++ b/frontend/styles/views/main/main-view.css
@@ -42,3 +42,7 @@ vaadin-tab[selected] {
   background-color: var(--lumo-primary-color-10pct);
   color: var(--lumo-primary-text-color);
 }
+
+.user-menu{
+	margin-right: 10px;
+}
